@@ -1,0 +1,10 @@
+Python Twitter Tools (PTT) includes a Twitter API, command-line tool, and IRC
+bot. It is developed by Mike Verdone and the Python Twitter Tools developer
+team.
+
+The Minimalist Twitter API for Python is a Python API for Twitter, everyone's
+favorite Web 2.0 Facebook-style status updater for people on the go. Also
+included is a twitter command-line tool for getting your friends' tweets and
+setting your own tweet from the safety and security of your favorite shell.
+Also included is an IRC bot that can announce Twitter updated to an IRC
+channel.
