@@ -1,0 +1,58 @@
+@comment $NetBSD$
+bin/twitter
+bin/twitter-archiver
+bin/twitter-follow
+bin/twitter-log
+bin/twitter-stream-example
+bin/twitterbot
+${PYSITELIB}/${EGG_INFODIR}/PKG-INFO
+${PYSITELIB}/${EGG_INFODIR}/SOURCES.txt
+${PYSITELIB}/${EGG_INFODIR}/dependency_links.txt
+${PYSITELIB}/${EGG_INFODIR}/entry_points.txt
+${PYSITELIB}/${EGG_INFODIR}/top_level.txt
+${PYSITELIB}/${EGG_INFODIR}/zip-safe
+${PYSITELIB}/twitter/__init__.py
+${PYSITELIB}/twitter/__init__.pyc
+${PYSITELIB}/twitter/__init__.pyo
+${PYSITELIB}/twitter/ansi.py
+${PYSITELIB}/twitter/ansi.pyc
+${PYSITELIB}/twitter/ansi.pyo
+${PYSITELIB}/twitter/api.py
+${PYSITELIB}/twitter/api.pyc
+${PYSITELIB}/twitter/api.pyo
+${PYSITELIB}/twitter/archiver.py
+${PYSITELIB}/twitter/archiver.pyc
+${PYSITELIB}/twitter/archiver.pyo
+${PYSITELIB}/twitter/auth.py
+${PYSITELIB}/twitter/auth.pyc
+${PYSITELIB}/twitter/auth.pyo
+${PYSITELIB}/twitter/cmdline.py
+${PYSITELIB}/twitter/cmdline.pyc
+${PYSITELIB}/twitter/cmdline.pyo
+${PYSITELIB}/twitter/follow.py
+${PYSITELIB}/twitter/follow.pyc
+${PYSITELIB}/twitter/follow.pyo
+${PYSITELIB}/twitter/ircbot.py
+${PYSITELIB}/twitter/ircbot.pyc
+${PYSITELIB}/twitter/ircbot.pyo
+${PYSITELIB}/twitter/logger.py
+${PYSITELIB}/twitter/logger.pyc
+${PYSITELIB}/twitter/logger.pyo
+${PYSITELIB}/twitter/oauth.py
+${PYSITELIB}/twitter/oauth.pyc
+${PYSITELIB}/twitter/oauth.pyo
+${PYSITELIB}/twitter/oauth_dance.py
+${PYSITELIB}/twitter/oauth_dance.pyc
+${PYSITELIB}/twitter/oauth_dance.pyo
+${PYSITELIB}/twitter/stream.py
+${PYSITELIB}/twitter/stream.pyc
+${PYSITELIB}/twitter/stream.pyo
+${PYSITELIB}/twitter/stream_example.py
+${PYSITELIB}/twitter/stream_example.pyc
+${PYSITELIB}/twitter/stream_example.pyo
+${PYSITELIB}/twitter/twitter_globals.py
+${PYSITELIB}/twitter/twitter_globals.pyc
+${PYSITELIB}/twitter/twitter_globals.pyo
+${PYSITELIB}/twitter/util.py
+${PYSITELIB}/twitter/util.pyc
+${PYSITELIB}/twitter/util.pyo
