@@ -1,0 +1,5 @@
+$NetBSD$
+
+SHA1 (twitter-1.9.0.tar.gz) = e42089c4067498f7aefaf16f32062cefb4141f5a
+RMD160 (twitter-1.9.0.tar.gz) = 703821166ca80e757a2d806b6d4bd23e1cc1e676
+Size (twitter-1.9.0.tar.gz) = 31441 bytes
