@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.5 2012/10/03 21:57:22 wiz Exp $
+# $NetBSD: Makefile,v 1.6 2012/10/08 23:32:50 minskim Exp $
 
 DISTNAME=	texlive.infra
 PKGNAME=	tex-${DISTNAME}-2012.27610
@@ -21,7 +21,6 @@ SUBST_FILES.paths=	tlpkg/TeXLive/TLPaper.pm tlpkg/TeXLive/TLUtils.pm
 SUBST_SED.paths=	-e 's,@KPSEWHICH@,${PREFIX}/bin/kpsewhich,g'
 
 .include "../../print/texlive/package.mk"
-.include "../../lang/perl5/dirs.mk"
 
 do-install:
 	${INSTALL_DATA} ${WRKSRC}/tlpkg/TeXLive/*.pm \
