@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2012,v 1.3470 2012/11/01 08:55:01 wiz Exp $
+$NetBSD: CHANGES-2012,v 1.3471 2012/11/02 01:46:17 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2012:
 
@@ -5312,3 +5312,4 @@ Changes to the packages collection and infrastructure in 2012:
 	Added biology/plinkseq version 0.08 [asau 2012-11-01]
 	Updated graphics/cairo to 1.12.6nb3 [wiz 2012-11-01]
 	Updated devel/mercurial to 2.4 [wiz 2012-11-02]
+	Added net/py-ptt version 1.9.0 [imil 2012-11-02]
